# Hertz_Magic

./: .gitignore  CLAUDE.md  CMakeLists.txt  METHODOLOGY.md  README.md  build_mac.sh
.claude/: settings.json
.icm/: drift-check.py  manifest.json
Source/: CONTEXT.md  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/dsp/: CONTEXT.md  Eq.cpp  Master.cpp  MultibandComp.cpp  ParamIDs.h  Parameters.cpp  PluginProcessor.cpp  PluginProcessor.h  Saturation.cpp  SpectralTame.cpp
Source/ui/: CONTEXT.md  EqCurveDisplay.cpp  LookAndFeel.cpp  Meters.cpp  MultibandGRDisplay.cpp  PluginEditor.cpp  PluginEditor.h  PresetBar.cpp  SaturationDisplays.cpp  SpectralTameDisplay.cpp
